# libjrpc-1

./: Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  bootstrap.sh  build.sh  config.h  config.h.in  config.h.in~  config.sh  config.status  configure  configure.ac  configure.scan  libjrpc.pc.in  libtool
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  dbg.h  ipsc.c  ipsc.h  jrpc.c  jrpc.h
