EXTRA_DIST = README 
CLEANFILES =
ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libjrpc.pc

EXTRA_DIST += libjrpc.pc.in
CLEANFILES += libjrpc.pc

SUBDIRS = src

# EXTRA_DIST = aclocal.m4 README 
# DIST_SUBDIRS = src
